--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/core": "^4.2.0",
     "@octokit/rest": "^19.0.7",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "chalk": "^5.2.0",
     "daisyui": "^2.51.5",
+    "dotenv": "^16.0.3",
+    "encoding": "^0.1.13",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "eventsource-parser": "^0.1.0",
     "mathjs": "^11.7.0",
     "next": "13.2.3",
+    "octokit-plugin-create-pull-request": "^4.1.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
